--- a/Eclipse.csproj
+++ b/Eclipse.csproj
@@ -35,6 +35,6 @@
     <PackageReference Include="VRising.VampireCommandFramework" Version="0.9.0" />
     </ItemGroup>
 	<Target Name="BuildToClient" AfterTargets="Build">
-		<Copy SourceFiles="$(TargetDir)$(ProjectName).dll" DestinationFolder="C:\Program Files (x86)\Steam\steamapps\common\VRising\BepInEx\plugins" />
+		<Copy SourceFiles="$(TargetDir)$(ProjectName).dll" DestinationFolder="d:\Games\Steam\steamapps\common\VRising\BepInEx\plugins" />
 	</Target>   
 </Project>
